--- a/index.html
+++ b/index.html
@@ -107,26 +107,26 @@
                       <p class="slider--item-description">Managed online presence and created engaging content for the entertainment.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-center">
+                  <li>
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">2ndTo Post Blog</p>
+                      <p class="slider--item-title">2nd To Post Blog</p>
                       <p class="slider--item-description">Provided content creation and copywriting services to drive engagement and readership.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li>
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
                       </div>
                       
-                      <p class="slider--item-title">Brave Heart Entertainment</p>
+                      <p class="slider--item-title">NaijaGospeller</p>
                       <p class="slider--item-description">Developed and implemented social media strategies to increase online presence and reach.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-center">
+                  <li>
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
@@ -159,7 +159,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>i am<br>a very <br>passionate<br>expert</h2>
+                <h2>Digital Marketing Expert<br>and <br>Branding<br>expert</h2>
                 <p>As a graduate of Global Wealth University, I've honed my skills in digital marketing, social media management, and content creation. With a keen eye for detail and a passion for innovative storytelling, I deliver high-quality work that drives results. I'm committed to staying up-to-date with industry trends and best practices to provide exceptional service to my clients.</p>
                 <a href="#0">Career
                   <span>
@@ -174,7 +174,7 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3></h3>
+                  <h3>Digital Marketer</h3>
                 </a>
                 <a href="#0">
                   <h3>Journalist</h3>
@@ -190,7 +190,7 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
+                    <p>Ikeja,Lagos Nigeria</p>
                     <a href="mailto:tolulopebabafemi8@gmail.com">tolulopebabfemi8@@gmail.com</a>
                     <a href="tel:+2348143491710">+2348143491710</a>
                   </div>
