--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/tolu.jpg" alt="Welcome">
+                <img src="assets/img/logo.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -107,7 +107,7 @@
                       <p class="slider--item-description">Managed online presence and created engaging content for the entertainment.</p>
                     </a>
                   </li>
-                  <li>
+                  <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
@@ -116,7 +116,7 @@
                       <p class="slider--item-description">Provided content creation and copywriting services to drive engagement and readership.</p>
                     </a>
                   </li>
-                  <li>
+                  <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
@@ -126,7 +126,7 @@
                       <p class="slider--item-description">Developed and implemented social media strategies to increase online presence and reach.</p>
                     </a>
                   </li>
-                  <li>
+                  <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
@@ -191,7 +191,7 @@
                 <div class="modal">
                   <div class="modal--information">
                     <p>Ikeja,Lagos Nigeria</p>
-                    <a href="mailto:tolulopebabafemi8@gmail.com">tolulopebabfemi8@@gmail.com</a>
+                    <a href="mailto:tolulopebabafemi8@gmail.com">tolulopebabafemi8@@gmail.com</a>
                     <a href="tel:+2348143491710">+2348143491710</a>
                   </div>
                   <ul class="modal--options">
