--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/logo.png" alt="Welcome">
+                <img src="assets/img/contact-visual.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
