--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/contact-visual.png" alt="Welcome">
+                <img src="assets/img/introduction-visual.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -77,7 +77,7 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Selected Projects</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
@@ -107,7 +107,7 @@
                       <p class="slider--item-description">Managed online presence and created engaging content for the entertainment.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-left">
+                  <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
@@ -116,7 +116,7 @@
                       <p class="slider--item-description">Provided content creation and copywriting services to drive engagement and readership.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-center">
+                  <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
