--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                 </div>
                 <input type="submit" value="Send Request">
               </form>
+              <p>© 2025 <a href="https://www.techgee.com.ng" target="_blank" rel="noopener noreferrer">TechGee</a>. All rights reserved. | Crafted with passion.</p>
             </div>
           </li>
         </ul>
